# ChangeLog for gnome-extra/libgnomemm
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgnomemm/Attic/ChangeLog,v 1.6 2003/02/12 06:55:05 vapier Exp $

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 

*libgnomemm-1.3.6 (13 Sep 2002)
  13 Sep 2002; Spider <spider@gentoo.org> libgnomemm-1.3.6.ebuild :
  new version by Markus Bertheau <twanger@bluetwanger.de>
    
*libgnomemm-1.3.4 (17 Jun 2002)
  17 Jun 2002 ;Spider <spider@gentoo.org> libgnomemm-1.3.4.ebuild :
  new version
  
*libgnomemm-1.3.3 (02 Jun 2002)
  02 Jun 2002; Spider <spider@gentoo.org> ChangeLog libgnomemm-1.3.3.ebuild :
  gnome2.eclass version of foser <foser@sesmar.eu.org> gnome-c++
  bindings.
  initial release
