@@ -1,0 +1,9 @@
+MD5 26fd62f70ac376a9824fc962f061e023 ChangeLog 920
+MD5 14a7d8f7b7af8a33a10008481bbb03ee libgnomemm-1.3.3.ebuild 622
+MD5 4cf5edd6669ebb96854143730b8bca69 libgnomemm-1.3.4.ebuild 619
+MD5 fbe548c2486241998e12c9d8374b9822 libgnomemm-1.3.6.ebuild 623
+MD5 e84b94c8c407ed2b9f4c388af8ae6898 libgnomemm-1.3.10.ebuild 655
+MD5 4c0128a59591b62233597bbeabcd05fb files/digest-libgnomemm-1.3.3 68
+MD5 1ead5f084a207bb9097862fa76e2ff1a files/digest-libgnomemm-1.3.4 68
+MD5 b4577deebc4e6d45392f38dfb09b7c70 files/digest-libgnomemm-1.3.6 68
+MD5 5c5939a31f22ffa4c7b3f3076ef8f16f files/digest-libgnomemm-1.3.10 69
