@@ -1,0 +1,23 @@
+# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgnomemm/Attic/libgnomemm-1.3.10.ebuild,v 1.1 2003/04/26 20:52:40 liquidx Exp $
+
+inherit gnome2
+
+S=${WORKDIR}/${P}
+SLOT="0"
+DESCRIPTION="C++ bindings for libgnome"
+SRC_URI="mirror://sourceforge/gtkmm/${P}.tar.gz"
+HOMEPAGE="http://gtkmm.sourceforge.net/"
+LICENSE="LGPL-2.1"
+KEYWORDS="~x86 ~ppc ~sparc"
+
+RDEPEND=">=x11-libs/gtkmm-2.2.1
+	>=gnome-extra/orbitcpp-1.3.5
+	>=gnome-base/libgnome-2.0.0"
+
+
+DEPEND=">=dev-util/pkgconfig-0.12.0
+	${RDEPEND}"
+
+DOCS="AUTHORS COPYING ChangeLog NEWS README TODO"
