@@ -1,6 +1,11 @@
 # ChangeLog for gnome-extra/libgnomemm
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgnomemm/Attic/ChangeLog,v 1.6 2003/02/12 06:55:05 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgnomemm/Attic/ChangeLog,v 1.7 2003/04/26 20:52:40 liquidx Exp $
+
+*libgnomemm-1.3.10 (26 Apr 2003)
+
+  26 Apr 2003; Alastair Tse <liquidx@gentoo.org> libgnomemm-1.3.10.ebuild:
+  version bump
 
   06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
  
